--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/sesion_1
+    url: jdbc:mysql://localhost:3306/user
     username: root
     password: admin
   jpa:
