--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,3 +18,7 @@ management:
     web:
       exposure:
         include: "*"
+
+app:
+  urls:
+    urlToRestaurantMicroService: "http://localhost:8091/"
